src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__assign.snap
---
source: src/stages/ty/constraint_builder.rs
expression: "Assign { variable: ExprId(1), value: ExprId(2) }"
---
[
    (
        Expr(
            ExprId(
                2,
            ),
        ),
        Eq(
            Expr(
                ExprId(
                    1,
                ),
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Type(
                Unit,
            ),
        ),
    ),
]
