src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__inferred.snap
---
source: src/stages/ty/constraint_builder.rs
expression: Inferred(ExprId(0))
---
[
    (
        Binding(
            BindingId(
                0,
            ),
        ),
        Eq(
            Expr(
                ExprId(
                    0,
                ),
            ),
        ),
    ),
]
