src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__logical and.snap
---
source: src/stages/ty/constraint_builder.rs
expression: "Binary { lhs: ExprId(1), op: LogicalAnd(AmpAmp), rhs: ExprId(2) }"
---
[
    (
        Expr(
            ExprId(
                1,
            ),
        ),
        Eq(
            Type(
                Boolean,
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                2,
            ),
        ),
        Eq(
            Type(
                Boolean,
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Type(
                Boolean,
            ),
        ),
    ),
]
