src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__negative.snap
---
source: src/stages/ty/constraint_builder.rs
expression: "Unary { op: Negative(Minus), value: ExprId(1) }"
---
[
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Expr(
                ExprId(
                    1,
                ),
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                1,
            ),
        ),
        Integer(
            Signed,
        ),
    ),
]
