src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__params.snap
---
source: src/stages/ty/constraint_builder.rs
expression: "[(BindingId(1), I8), (BindingId(2), Boolean)] => Boolean"
---
[
    (
        Binding(
            BindingId(
                1,
            ),
        ),
        Eq(
            Type(
                I8,
            ),
        ),
    ),
    (
        Binding(
            BindingId(
                2,
            ),
        ),
        Eq(
            Type(
                Boolean,
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Type(
                Boolean,
            ),
        ),
    ),
]
