src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__plus.snap
---
source: src/stages/ty/constraint_builder.rs
expression: "Binary { lhs: ExprId(1), op: Plus(Plus), rhs: ExprId(2) }"
---
[
    (
        Expr(
            ExprId(
                1,
            ),
        ),
        Eq(
            Expr(
                ExprId(
                    2,
                ),
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                1,
            ),
        ),
        Integer(
            Any,
        ),
    ),
    (
        Expr(
            ExprId(
                2,
            ),
        ),
        Integer(
            Any,
        ),
    ),
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Expr(
                ExprId(
                    1,
                ),
            ),
        ),
    ),
]
