src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__return int.snap
---
source: src/stages/ty/constraint_builder.rs
expression: "[] => I8"
---
[
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Type(
                I8,
            ),
        ),
    ),
]
