src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__simple.snap
---
source: src/stages/ty/constraint_builder.rs
expression: "[] => Unit"
---
[
    Eq(
        Expr(
            ExprId(
                0,
            ),
        ),
        Type(
            Unit,
        ),
    ),
]
