src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__with type.snap
---
source: src/stages/ty/constraint_builder.rs
expression: Some(I8)
---
[
    Eq(
        Binding(
            BindingId(
                0,
            ),
        ),
        Type(
            I8,
        ),
    ),
]
