src/stages/ty/snapshots/lumina2__stages__ty__constraint_builder__test__with unit.snap
---
source: src/stages/ty/constraint_builder.rs
expression: Some(Unit)
---
[
    Eq(
        Binding(
            BindingId(
                0,
            ),
        ),
        Type(
            Unit,
        ),
    ),
]
